# workspace_booking_system

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  backup.sql  docker-entrypoint.sh  dockerfile
.cargo/: config.toml
.github/workflows/: docker.yaml  dockerhub.yaml  ghcr-docker.yml
charts/workspace-booking/: Chart.yaml  values.yaml
charts/workspace-booking/templates/: _helpers.tpl  db-configMap.yml  db-secret.yaml  db-service.yml  db-stateful.yml  workspace-dev.yml  workspace-svc.yml
config/: development.yaml  production.yaml  test.yaml
docker/: docker-compose.yaml  template.env
docu/: azure.md  entraID.md  kubernetes.md
examples/: playground.rs
frontend/: angular.json  package-lock.json  proxy.conf.json
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontendtest/: angular.json  package.json
frontendtest/src/app/: app.routes.ts
migration/src/: lib.rs  m20220101_000001_users.rs  m250714_000002_oauth2_sessions.rs
old/: package-lock.json
old/src/: LocoSplash.tsx
src/: app.rs  lib.rs
src/controllers/: admin.rs  auth.rs  delete.rs  mod.rs  oauth.rs  overview.rs  read.rs  update.rs
src/initializers/: axum_session.rs  mod.rs  oauth2.rs
src/models/: create_admin.rs  default_entries.rs  help_fn.rs  mod.rs  mrbs_area.rs  mrbs_entry.rs  mrbs_participants.rs  mrbs_repeat.rs  mrbs_room.rs  mrbs_sessions.rs  mrbs_variables.rs  mrbs_zoneinfo.rs  o_auth2_sessions.rs  oauth_user.rs  users.rs
src/models/_entities/: mod.rs  mrbs_area.rs  mrbs_entry.rs  mrbs_participants.rs  mrbs_repeat.rs  mrbs_room.rs  mrbs_sessions.rs  mrbs_variables.rs  mrbs_zoneinfo.rs  o_auth2_sessions.rs  prelude.rs  users.rs
src/response_type/: error.rs  success.rs
src/views/: auth.rs
tests/models/: users.rs
tests/requests/: admin.rs  auth.rs  delete.rs  mod.rs  prepare_data.rs  update.rs
(+58 files in other folders)
